[package]
name = "lib-garble-wrapper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# requires >=1.0.80 cf https://github.com/dtolnay/cxx/issues/1065
cxx = { version = "1.0.80", default-features = false }

# when used in SGX enclave
# else: error: no global memory allocator found but one is required; link to std or add `#[global_allocator]` to a static item that implements the GlobalAlloc trait
# Indeed defined in https://github.com/apache/incubator-teaclave-sgx-sdk/blob/v1.1.5/sgx_no_tstd/src/lib.rs
# sgx_no_tstd = { optional = true, rev = "v1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
# sgx_alloc = { optional = true, rev = "v1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git"}

# [target.'cfg(not(target_env = "sgx"))'.dependencies]
# sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
# sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git",  features = ["net"] }


[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"

rust-cxx-cmake-bridge = { git = "https://github.com/Interstellar-Network/rust-cxx-cmake-bridge.git" }

[dev-dependencies]
tempfile = "3.3.0"

[lib]
name = "lib_garble_wrapper"
# DO NOT use staticlib; that prevents from using this crate from circuits_routes.rs etc
# crate-type = ["cdylib", "lib"]
crate-type = ["staticlib", "lib"]

[features]
# TODO(rust) no_std
default = []
std = [
    # 'sp-std/std',
]
alloc = [ 'cxx/alloc' ]
sgx = [
	# "sgx_no_tstd",
    # "sgx_alloc"
]